grid added to medium page

--- a/medium.html
+++ b/medium.html
@@ -13,7 +13,7 @@
 
 
 
-    <div class="jumbotron">
+  <div class="jumbotron">
   <h1 class="display-4"> Memorise the Squares Game</h1>
   <p class="lead"> Medium level </p>
   <hr class="my-4">
@@ -26,26 +26,16 @@
   </p>
   </div>
     </div>
+    <div class="row">
+      <div class="col-md-12">
+
+
+    </div>
     <div id="gamebody">
-      <tr>
-    <td data-num="0"</td>
-    <td></td>
-    <th></th>
-  </tr>
-  <tr>
-    <td></td>
-    <td></td>
-    <td></td>
-  </tr>
-  <tr>
-    <td></td>
-    <td></td>
-    <td></td>
-  </tr>
 
 
-
-
+  </div>
+  </div>
   </div>
   </div>
 
