--- a/medium.html
+++ b/medium.html
@@ -7,38 +7,61 @@
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   </head>
   <body>
+    <h1> Medium Level</h1>
     <div class="container">
-      <div class="row">
-      <div class="col-md-12 ">
+    <div class="start"> Start </div>
+    <div id="game-squares">
 
 
+    <div id="game-block1" class="game-block"></div>
+    <div id="game-block2" class="game-block"></div>
+    <div id="game-block3" class="game-block"></div>
+    <div id="game-block4" class="game-block"></div>
+    <div id="game-block5" class="game-block"></div>
+    <div id="game-block6" class="game-block"></div>
+    <br>
+    <div id="game-block7" class="game-block"></div>
+    <div id="game-block8" class="game-block"></div>
+    <div id="game-block9" class="game-block"></div>
+    <div id="game-block10" class="game-block"></div>
+    <div id="game-block11" class="game-block"></div>
+    <div id="game-block12" class="game-block"></div>
+    <br>
+    <div id="game-block13" class="game-block"></div>
+    <div id="game-block14" class="game-block"></div>
+    <div id="game-block15" class="game-block"></div>
+    <div id="game-block16" class="game-block"></div>
+    <div id="game-block17" class="game-block"></div>
+    <div id="game-block18" class="game-block"></div>
+    <br>
+    <div id="game-block19" class="game-block"></div>
+    <div id="game-block20" class="game-block"></div>
+    <div id="game-block21" class="game-block"></div>
+    <div id="game-block22" class="game-block"></div>
+    <div id="game-block23" class="game-block"></div>
+    <div id="game-block24" class="game-block"></div>
+    <br>
+    <div id="game-block25" class="game-block"></div>
+    <div id="game-block26" class="game-block"></div>
+    <div id="game-block27" class="game-block"></div>
+    <div id="game-block28" class="game-block"></div>
+    <div id="game-block29" class="game-block"></div>
+    <div id="game-block30" class="game-block"></div>
+    <br>
+    <div id="game-block31" class="game-block"></div>
+    <div id="game-block32" class="game-block"></div>
+    <div id="game-block33" class="game-block"></div>
+    <div id="game-block34" class="game-block"></div>
+    <div id="game-block35" class="game-block"></div>
+    <div id="game-block36" class="game-block"></div>
+</div>
 
-  <div class="jumbotron">
-  <h1 class="display-4"> Memorise the Squares Game</h1>
-  <p class="lead"> Medium level </p>
-  <hr class="my-4">
-  <p>Select Diffuculty below</p>
-  <p class="lead">
-    <a class="btn btn-primary btn-lg" href="index.html" role="button">Home </a>
-    <a class="btn btn-primary btn-lg" href="easy.html" role="button">Easy </a>
-    <a class="btn btn-primary btn-lg" href="medium.html" role="button">Medium</a>
-    <a class="btn btn-primary btn-lg" href="hard.html" role="button">Hard</a>
-  </p>
-  </div>
-    </div>
-    <div class="row">
-      <div class="col-md-12">
-
-
-    </div>
     <div id="gamebody">
+      <div class="squareColour">
 
-
+      </div>
   </div>
   </div>
-  </div>
-  </div>
-
   <script src="js/jquery-3.3.1.js" charset="utf-8"></script>
   <script src="js/index.js" charset="utf-8"></script>
   </body>
