--- a/medium.html
+++ b/medium.html
@@ -9,51 +9,53 @@
   <body>
     <h1> Medium Level</h1>
     <div class="container">
-    <div class="start"> Start </div>
+    <button onclick ="setTimeout(squares, 1000);"> Start </button>
+
+
     <div id="game-squares">
 
 
-    <div id="game-block1" class="game-block"></div>
-    <div id="game-block2" class="game-block"></div>
-    <div id="game-block3" class="game-block"></div>
-    <div id="game-block4" class="game-block"></div>
-    <div id="game-block5" class="game-block"></div>
-    <div id="game-block6" class="game-block"></div>
+    <div id="1" class="game-block"></div>
+    <div id="2" class="game-block"></div>
+    <div id="3" class="game-block"></div>
+    <div id="4" class="game-block"></div>
+    <div id="5" class="game-block"></div>
+    <div id="6" class="game-block"></div>
     <br>
-    <div id="game-block7" class="game-block"></div>
-    <div id="game-block8" class="game-block"></div>
-    <div id="game-block9" class="game-block"></div>
-    <div id="game-block10" class="game-block"></div>
-    <div id="game-block11" class="game-block"></div>
-    <div id="game-block12" class="game-block"></div>
+    <div id="7" class="game-block"></div>
+    <div id="8" class="game-block"></div>
+    <div id="9" class="game-block"></div>
+    <div id="10" class="game-block"></div>
+    <div id="11" class="game-block"></div>
+    <div id="12" class="game-block"></div>
     <br>
-    <div id="game-block13" class="game-block"></div>
-    <div id="game-block14" class="game-block"></div>
-    <div id="game-block15" class="game-block"></div>
-    <div id="game-block16" class="game-block"></div>
-    <div id="game-block17" class="game-block"></div>
-    <div id="game-block18" class="game-block"></div>
+    <div id="13" class="game-block"></div>
+    <div id="14" class="game-block"></div>
+    <div id="15" class="game-block"></div>
+    <div id="16" class="game-block"></div>
+    <div id="17" class="game-block"></div>
+    <div id="18" class="game-block"></div>
     <br>
-    <div id="game-block19" class="game-block"></div>
-    <div id="game-block20" class="game-block"></div>
-    <div id="game-block21" class="game-block"></div>
-    <div id="game-block22" class="game-block"></div>
-    <div id="game-block23" class="game-block"></div>
-    <div id="game-block24" class="game-block"></div>
+    <div id="19" class="game-block"></div>
+    <div id="20" class="game-block"></div>
+    <div id="21" class="game-block"></div>
+    <div id="22" class="game-block"></div>
+    <div id="23" class="game-block"></div>
+    <div id="24" class="game-block"></div>
     <br>
-    <div id="game-block25" class="game-block"></div>
-    <div id="game-block26" class="game-block"></div>
-    <div id="game-block27" class="game-block"></div>
-    <div id="game-block28" class="game-block"></div>
-    <div id="game-block29" class="game-block"></div>
-    <div id="game-block30" class="game-block"></div>
+    <div id="25" class="game-block"></div>
+    <div id="26" class="game-block"></div>
+    <div id="27" class="game-block"></div>
+    <div id="28" class="game-block"></div>
+    <div id="29" class="game-block"></div>
+    <div id="30" class="game-block"></div>
     <br>
-    <div id="game-block31" class="game-block"></div>
-    <div id="game-block32" class="game-block"></div>
-    <div id="game-block33" class="game-block"></div>
-    <div id="game-block34" class="game-block"></div>
-    <div id="game-block35" class="game-block"></div>
-    <div id="game-block36" class="game-block"></div>
+    <div id="31" class="game-block"></div>
+    <div id="32" class="game-block"></div>
+    <div id="33" class="game-block"></div>
+    <div id="34" class="game-block"></div>
+    <div id="35" class="game-block"></div>
+    <div id="36" class="game-block"></div>
 </div>
 
     <div id="gamebody">
