--- a/level2.html
+++ b/level2.html
@@ -9,9 +9,7 @@
   <body>
     <h1> Medium Level</h1>
     <div class="container">
-        <br>
-    <button id="start" onclick ="setTimeout(squares, 1000);"> Start </button>
-    <br>
+
     <div id="game-squares">
 
 
@@ -65,6 +63,6 @@
   </div>
   </div>
   <script src="js/jquery-3.3.1.js" charset="utf-8"></script>
-  <script src="js/index.js" charset="utf-8"></script>
+  <script src="js/level2.js" charset="utf-8"></script>
   </body>
 </html>
