--- a/medium.html
+++ b/medium.html
@@ -9,8 +9,15 @@
   <body>
     <h1> Medium Level</h1>
     <div class="container">
+      <div id="countdown">
+
+      </div>
+      <div id="scoreboard">
+
+      </div>
         <br>
-    <button id="start" onclick ="setTimeout(squares, 1000);"> Start </button>
+    <button id="start"> Start </button>
+     <!-- onclick ="setTimeout(squares, 1000);" -->
     <br>
     <div id="game-squares">
 
