added game over page

--- a/medium.html
+++ b/medium.html
@@ -69,6 +69,9 @@
       <div class="squareColour">
 
       </div>
+      <div class="game-over">
+
+      </div>
   </div>
   </div>
   <script src="js/jquery-3.3.1.js" charset="utf-8"></script>
