new button added

--- a/game.html
+++ b/game.html
@@ -7,7 +7,7 @@
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   </head>
   <body>
-    <h1> Medium Level</h1>
+    <h1> Memorise the squares </h1>
     <div class="container">
       <div id="countdown">
 
@@ -17,6 +17,7 @@
       </div>
         <br>
     <button id="start"> Start </button>
+    <button id="done"> done </button>
 
     <br>
     <div id="game-squares">
@@ -67,10 +68,10 @@
 
 
       <div class="game-over">
-
       </div>
+
   </div>
-  
+
   <script src="js/jquery-3.3.1.js" charset="utf-8"></script>
   <script src="js/index.js" charset="utf-8"></script>
   </body>
