--- a/index.html
+++ b/index.html
@@ -12,14 +12,13 @@
       <div class="col-md-12 ">
     <div class="jumbotron">
   <h1 class="display-4"> Memorise the Squares Game</h1>
-  <p class="lead">Instructions - when the squares change colour, memorise them and when they dissappear click the ones you remember BUT click on an inccorect square you will lose.</p>
+  <p class="lead">Instructions - when the squares change colour, memorise them and when they dissappear click the ones you remember BUT do this before the time runs out otherwise you will lose.</p>
   <hr class="my-4">
   <p>Select diffuculty below</p>
   <p class="lead">
     <a class="btn btn-primary btn-lg" href="index.html" role="button">Home </a>
-    <a class="btn btn-primary btn-lg" href="easy.html" role="button">Easy </a>
-    <a class="btn btn-primary btn-lg" href="medium.html" role="button">Medium</a>
-    <a class="btn btn-primary btn-lg" href="hard.html" role="button">Hard</a>
+    <a class="btn btn-primary btn-lg" href="game.html" role="button">Play Game </a>
+
   </p>
 </div>
 </div>
