new pages added

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
   <h1 class="display-4"> Memorise the Squares Game</h1>
   <p class="lead">Instructions - when the squares change colour, memorise them and when they dissappear click the ones you remember BUT do this before the time runs out otherwise you will lose.</p>
   <hr class="my-4">
-  <p>Select diffuculty below</p>
+  <p>press play game to start</p>
   <p class="lead">
-    <a class="btn btn-primary btn-lg" href="index.html" role="button">Home </a>
+    
     <a class="btn btn-primary btn-lg" href="game.html" role="button">Play Game </a>
 
   </p>
