--- a/level3.html
+++ b/level3.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <h1> Memorise the squares </h1>
+    <<h2> Level 3</h2>
     <div class="container">
       <div id="countdown">
 
