--- a/level2.html
+++ b/level2.html
@@ -73,6 +73,6 @@
   </div>
 
   <script src="js/jquery-3.3.1.js" charset="utf-8"></script>
-  <script src="js/index.js" charset="utf-8"></script>
+  <script src="js/level2.js" charset="utf-8"></script>
   </body>
 </html>
