--- a/level3.html
+++ b/level3.html
@@ -8,7 +8,6 @@
   </head>
   <body>
     <h1> Memorise the squares </h1>
-    <<h2> Level 3</h2>
     <div class="container">
       <div id="countdown">
 
@@ -18,7 +17,7 @@
       </div>
         <br>
     <button id="start"> Start </button>
-    <button id="done"> done </button>
+    <button id="complete"> complete </button>
 
     <br>
     <div id="game-squares">
@@ -74,6 +73,6 @@
   </div>
 
   <script src="js/jquery-3.3.1.js" charset="utf-8"></script>
-  <script src="js/index.js" charset="utf-8"></script>
+  <script src="js/level3.js" charset="utf-8"></script>
   </body>
 </html>
