--- a/level2.html
+++ b/level2.html
@@ -17,7 +17,7 @@
       </div>
         <br>
     <button id="start"> Start </button>
-    <button id="done"> done </button>
+    <button id="complete"> done </button>
 
     <br>
     <div id="game-squares">
