--- a/game.html
+++ b/game.html
@@ -16,8 +16,8 @@
 
       </div>
         <br>
-    <button id="start"> Start </button>
-    <button id="done"> done </button>
+    <button id="Start"> Start </button>
+    <button id="done"> Done </button>
 
     <br>
     <div id="game-squares">
