--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
       <div class="row">
       <div class="col-md-12 ">
     <div class="jumbotron">
-  <h1 class="display-4"> Memorise the Squares Game</h1>
-  <p class="lead">Instructions - when the squares change colour, memorise them and when they dissappear click the ones you remember BUT do this before the time runs out otherwise you will lose.</p>
+  <h1 class="display-4"> Squaremory</h1>
+  <p class="lead">Instructions - When the squares change colour, memorise them and when they dissappear click the ones you remember BUT do this before the time runs out otherwise you will lose. if you find the squares within the time limit click done to level up.</p>
   <hr class="my-4">
-  <p>press play game to start</p>
+  <p>Press play game to start</p>
   <p class="lead">
-    
+
     <a class="btn btn-primary btn-lg" href="game.html" role="button">Play Game </a>
 
   </p>
