--- a/Gameover.html
+++ b/Gameover.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title> Gameover </title>
+    <link rel="stylesheet" href="css/gameover.css">
   </head>
   <body>
-    <h1> Game over </h1>
+    <h1> Game Over </h1>
+  <a class="home" href="index.html" role="button">Home </a>
   </body>
 </html>
