--- a/level3.html
+++ b/level3.html
@@ -7,7 +7,7 @@
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   </head>
   <body>
-    <h1> Memorise the squares </h1>
+    <h1> Squaremory </h1>
     <div class="container">
       <div id="countdown">
 
@@ -16,8 +16,8 @@
 
       </div>
         <br>
-    <button id="start"> Start </button>
-    <button id="complete"> complete </button>
+    <button id="Start"> Start </button>
+    <button id="Complete"> complete </button>
 
     <br>
     <div id="game-squares">
